@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.10-dev
 
+Don't try to set ulimit unlimited for coredumps on Solaris, unless run
+as root [Rob Kinyon <Rob.Kinyon@progressive-medical.com>]
+
 Added '-httpd_conf_extra <filename>' configuration option to
 allow a file of server config directives to be inherited
 in addition to the server's own httpd.conf file (or the one
